--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head lang="sv">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="assets/icon.webp">
+    <link rel="icon" href="assets/icon.png">
     <title>Cyan Bots</title>
 </head>
 <body>
